[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/theme.tres" type="Theme" id=1]
[ext_resource path="res://main/screens/MatchScreen.gd" type="Script" id=2]

[node name="MatchScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -1.0
margin_right = 3.0
margin_bottom = -1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 533.0
margin_bottom = 203.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="MatchPanel" type="Panel" parent="PanelContainer/VBoxContainer"]
margin_right = 526.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MatchPanel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 7.0
margin_top = -12.0
margin_right = 156.0
margin_bottom = 12.0
text = "Find at least"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox" type="SpinBox" parent="PanelContainer/VBoxContainer/MatchPanel"]
margin_left = 157.0
margin_top = 13.0
margin_right = 315.0
margin_bottom = 47.0
min_value = 2.0
max_value = 4.0
value = 2.0
align = 1
suffix = "players"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MatchButton" type="Button" parent="PanelContainer/VBoxContainer/MatchPanel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -105.0
margin_top = -25.0
margin_right = -5.0
margin_bottom = 25.0
text = "Match"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreatePanel" type="Panel" parent="PanelContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 526.0
margin_bottom = 127.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/CreatePanel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 7.0
margin_top = -12.0
margin_right = 249.0
margin_bottom = 12.0
text = "Create a private match"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateButton" type="Button" parent="PanelContainer/VBoxContainer/CreatePanel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -105.0
margin_top = -25.0
margin_right = -5.0
margin_bottom = 25.0
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinPanel" type="Panel" parent="PanelContainer/VBoxContainer"]
margin_top = 137.0
margin_right = 526.0
margin_bottom = 196.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/JoinPanel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 7.0
margin_top = -12.0
margin_right = 128.0
margin_bottom = 12.0
text = "Join match:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/JoinPanel"]
margin_left = 134.0
margin_top = 14.0
margin_right = 325.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasteButton" type="Button" parent="PanelContainer/VBoxContainer/JoinPanel"]
margin_left = 326.0
margin_top = 16.0
margin_right = 393.0
margin_bottom = 46.0
text = "Paste"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="PanelContainer/VBoxContainer/JoinPanel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -105.0
margin_top = -25.0
margin_right = -5.0
margin_bottom = 25.0
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaderboardButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -250.0
margin_top = -54.0
text = "Leaderboard"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PanelContainer/VBoxContainer/JoinPanel/PasteButton" to="." method="_on_PasteButton_pressed"]
[connection signal="pressed" from="LeaderboardButton" to="." method="_on_LeaderboardButton_pressed"]
